@@ -23,3 +23,4 @@
 - Quest objective amount is now optional (default 1)
 - Fixed issue when used 1.12 and lower versions then some materials not work correctly.
 - Added option to jobs shop to hide icon if a player there are no enough points to buy a item
+- Fixed issue for inventory dragging when a player is in jobs GUI.
